--- a/泛型.md
+++ b/泛型.md
@@ -1,6 +1,6 @@
 ### 泛型
 
-为什么java采用擦除法来实现泛型呢？为了兼容向前兼容老版
+为什么java采用擦除法(擦除类型参数然后添加cast)来实现泛型呢？为了向前兼容老版
 
 参考资料：
 
@@ -38,7 +38,7 @@ dataList.add(new Double(65));//compile error
 
 
 
-#### 2. List和List<Object>的区别， List和List<?>的区别
+#### 2. List和List<Object>的区别， List和List<?>的区别，? 和 ? extends Object区别
 
 你可以把List<String>转成List，但是不能把List<String>转成List<Object>，使用原生类型List就丢失了类型信息，你不知道List里面装的是什么样的东西了。
 
@@ -60,6 +60,24 @@ Set<?> data = (Set<?>)oldSet;
 ```
 
 上面两个list赋值操作都是合法的，原因是泛型只是为我们提供了一些类型检查工作，为了兼容老的代码（以前没有泛型的时候都是直接用List类型，所以很多老的类库都是返回List），泛型和原生态类型相互赋值在java中是完全被允许的，这就是造成了我们通过一个List原生态类型的转换，进行了一次不正确的赋值，绕过了编译器提供的检查。
+
+
+
+#### 3. 为什么数组是协变的呢？这在没有泛型的以前是很有用的
+
+比如我想定义一个给数组排序的通用方法，
+
+```java
+void sort(Object[] data);
+
+//幸好数组是泛型的，所以我们可以把int[]传递给sort函数
+
+//但是现在我们有了泛型，所以我们可以很方便的用泛型来改写这个方法
+<T> void sort(T[] data);
+
+```
+
+所以说，在某种意义上，现在数组是协变的原因主要是为了兼容以前的老版本
 
 
 
