--- a/3. netty EventExecutor介绍.md
+++ b/3. netty EventExecutor介绍.md
@@ -1,40 +1,36 @@
-### netty EventExecutor介绍
+### 3. Netty EventExecutor介绍
 
-前面介绍过netty中的pipeline，了解了pipeline，我们就理解了netty的数据流。今天我们介绍eventExecutor，了解了eventExecutor就可以了解netty的线程模型，这样就能够全方位的了解netty ！
+今天我们介绍EventExecutor，了解了EventExecutor就可以了解netty的线程模型，这样就能够从宏观上了解netty ！前面我们介绍过netty的核心在于异步，那么对于异步很关键的就是线程池的实现以及我们经常用的future/promise。
+
+netty并没有采用jdk的线程池实现，而是自己实现了一个线程池，这个线程池一方面可以更好的支持future/promise，另外一方面可以保证单线程内的事件执行顺序。在基于这套线程模型的基础上实现了NIO的事件循环，这样可以保证每个channel上事件处理都是顺序的，不存在竞争条件。
 
 #### 基本组件概念
 
-理解这篇文章是明白netty线程模型的一个很关键的点！netty没有采用jdk的线程池，而是自己实现了一套线程池的模型。
+理解这篇文章是明白netty线程模型的一个很关键的点。这篇主要是介绍一下netty的EventExecutor，先说下netty这个部分的几个组件的介绍：
 
-这篇主要是介绍一下netty的eventExecutor，先说下netty这个部分的几个组件的介绍：
-
-1. eventExecutorGroup： netty的线程池，netty没有采用jdk自带的线程池实现，而是在此基础上自己实现了一套，如下
+1. EventExecutorGroup： netty的线程池，netty没有采用jdk自带的线程池实现，而是在此基础上自己实现了一套，如下
 
    ```java
    public interface EventExecutorGroup extends ScheduledExecutorService, Iterable<EventExecutor>
    ```
 
-   可以看到实现了可执行定时任务的线程池接口，而且里面的单个线程模型是EventExecutor，并且实现了iterable接口！
+   可以看到实现了可执行定时任务的线程池接口，而且里面的单个线程实现的接口是EventExecutor，并且实现了iterable接口！
 
-2. eventExecutor： netty中的线程，实质就是对单个线程进行的封装
+2. EventExecutor： netty中的线程，实质就是对单个线程进行的封装
 
    ```java
    public interface EventExecutor extends EventExecutorGroup 
    ```
 
-   看到这里可能有点懵，eventExecutor又实现了EventExecutorGroup，实际上netty这里是把EventExecutor当成了一种特殊的EventExecutorGroup来对待，eventExecutor是只有一个线程的eventExecutorGroup。所以EventExecutorGroup和EventExecutor实际上可以认为是一样的功能组件，只不过一个是多线程，一个是单线程。其实EventExecutorGroup的执行也是交给内部的一个EventExecutor去执行，所以本质上在执行工作的是eventExecutor。eventExecutorGroup就是包工头，eventExecutor就是小工！
+   看到这里可能有点懵，EventExecutor又实现了EventExecutorGroup，实际上netty这里是把EventExecutor当成了一种特殊的EventExecutorGroup来对待，EventExecutor是只有一个特殊的EventExecutorGroup。所以EventExecutorGroup和EventExecutor实际上可以认为是一样的功能组件，其实EventExecutorGroup的执行也是交给内部的一个EventExecutor去执行，所以本质上在执行工作的是EventExecutor。EventExecutorGroup就是包工头，EventExecutor就是小工！在使用这个线程池的时候，我们将任务提交给EventExecutorGroup，EventExecutorGroup会从下属管理的EventExecutor中选择一个合适的来执行任务。
 
-#### eventExecutorGroup和eventExecutor
+#### EventExecutorGroup和EventExecutor具体介绍
 
 ###### EventExecutorGroup
 
 先介绍一下eventExecutorGroup，前面说过就是线程池嘛。线程池如果不熟悉的话，可以先去复习一下jdk的线程池，了解一下threadPoolExecutor！我们以默认实现DefaultEventExecutorGroup来一步步讲
 
-结构如下图：
-
-
-
-1. 其实从继承类图可以看出EventExecutorGroup实现了ExecutorService接口，EventExecutorGroup是一个线程池，这个线程池并且可以执行定时任务。但是这只是一个接口，所以下一步就是需要有一个实现
+1. 其实从继承关系可以看出EventExecutorGroup实现了ExecutorService接口，EventExecutorGroup是一个线程池，这个线程池并且可以执行定时任务。但是这只是一个接口，所以下一步就是需要有一个初步的抽象实现
 
 2. AbstractEventExecutorGroup实现了这个接口，但是实际上只是对这些方法进行了简单的实现，从下面的代码可以看出eventExecutorGroup就是简单的选择了一个eventExecutor来执行任务。具体选择就是通过next方法。
 
@@ -127,24 +123,27 @@
    }
    ```
 
-3. 上面抽象的实现只是提供了一些方法，并没有具体的实现，下面就是一个带有字段的抽象实现了，MultithreadEventExecutorGroup
+3. 上面抽象的实现只是提供了一些方法，并没有具体的实现，下面就是一个带有字段的抽象实现了，MultithreadEventExecutorGroup，这里实现了一个基于多EventExecutor（EventExecutor在实现的时候往往就是一个独立的线程，所以叫这里叫MultithreadEventExecutorGroup）的EventExecutorGroup。
 
    ```java
    public abstract class MultithreadEventExecutorGroup extends AbstractEventExecutorGroup {
 
        private final EventExecutor[] children;//1
-       private final Set<EventExecutor> readonlyChildren;
-       private final AtomicInteger terminatedChildren = new AtomicInteger();
-       private final Promise<?> terminationFuture = new DefaultPromise(GlobalEventExecutor.INSTANCE);
        private final EventExecutorChooserFactory.EventExecutorChooser chooser;//2
        
      	protected abstract EventExecutor newChild(Executor executor, Object... args) throws Exception;//3
 
+       @Override
+       public EventExecutor next() {
+           return chooser.next();//4
+       }
    }
    ```
 
    1. 如何管理麾下所有的EventExecutor呢，一个数组。
    2. 当提交任务的时候，如何选择一个EventExecutor来执行任务呢？提供了一个chooser类来进行选择，一般情况下只要依次选择就行了。
+   3. 具体的EventExecutor实现交给子类才决定，所以这里是一个抽象方法。
+   4. 可以看到next方法就是运用这个chooser选择一个下属的EventExecutor。
 
 4. 有了上面的抽象实现，我们还缺点啥？还缺如何建立一个EventExecutor，下面看看最后一个default实现类
 
@@ -154,45 +153,15 @@
     * to handle the tasks.
     */
    public class DefaultEventExecutorGroup extends MultithreadEventExecutorGroup {
-       /**
-        * @see #DefaultEventExecutorGroup(int, ThreadFactory)
-        */
-       public DefaultEventExecutorGroup(int nThreads) {
-           this(nThreads, null);
-       }
-
-       /**
-        * Create a new instance.
-        *
-        * @param nThreads          the number of threads that will be used by this instance.
-        * @param threadFactory     the ThreadFactory to use, or {@code null} if the default should be used.
-        */
-       public DefaultEventExecutorGroup(int nThreads, ThreadFactory threadFactory) {
-           this(nThreads, threadFactory, SingleThreadEventExecutor.DEFAULT_MAX_PENDING_EXECUTOR_TASKS,
-                   RejectedExecutionHandlers.reject());
-       }
-
-       /**
-        * Create a new instance.
-        *
-        * @param nThreads          the number of threads that will be used by this instance.
-        * @param threadFactory     the ThreadFactory to use, or {@code null} if the default should be used.
-        * @param maxPendingTasks   the maximum number of pending tasks before new tasks will be rejected.
-        * @param rejectedHandler   the {@link RejectedExecutionHandler} to use.
-        */
-       public DefaultEventExecutorGroup(int nThreads, ThreadFactory threadFactory, int maxPendingTasks,
-                                        RejectedExecutionHandler rejectedHandler) {
-           super(nThreads, threadFactory, maxPendingTasks, rejectedHandler);
-       }
 
        @Override
        protected EventExecutor newChild(Executor executor, Object... args) throws Exception {
-           return new DefaultEventExecutor(this, executor, (Integer) args[0], (RejectedExecutionHandler) args[1]);
+           return new DefaultEventExecutor(this, executor, (Integer) args[0], (RejectedExecutionHandler) args[1]);//1
        }
    }
    ```
 
-   可以看到这个类实现了netChild方法，创建了一个DefaultEventExecutor实例！
+   1. 可以看到这个类实现了netChild方法，创建了一个DefaultEventExecutor实例！
 
 上面的例子说明了EventExecutorGroup的结构，其实eventExecutor并没有什么特别的地方，只是做了一个EventExecutor的管理和分配，下面说一下核心的EventExecutor。
 
@@ -204,17 +173,12 @@
 
 我们从上往下看，最上面就是EventExecutor的接口，由于EventExecutor是特殊的EventExecutorGroup，所以
 
-这个接口方法不表
+这个接口方法不表，和上面的类似
 
 ```java
 public abstract class AbstractEventExecutor extends AbstractExecutorService implements EventExecutor {
-    private static final InternalLogger logger = InternalLoggerFactory.getInstance(AbstractEventExecutor.class);
-
-    static final long DEFAULT_SHUTDOWN_QUIET_PERIOD = 2;
-    static final long DEFAULT_SHUTDOWN_TIMEOUT = 15;
 
     private final EventExecutorGroup parent;//1
-    private final Collection<EventExecutor> selfCollection = Collections.<EventExecutor>singleton(this);
 
     protected AbstractEventExecutor() {
         this(null);
@@ -236,9 +200,9 @@ public abstract class AbstractEventExecutor extends AbstractExecutorService impl
 }
 ```
 
-1. 可以看到这个抽象的实现有一个parent的字段，这个字段就是指向它所归属的eventExecutorGroup
-2. 看到这个next方法返回的是自己，也就是说默认这个eventExecutor是一个只有一个eventExecutor的eventExecutorGroup。
-3. 这个类还是继承了AbstractExecutorService类，可以利用到jdk给我提供的submit方法，省去了自己去写的麻烦。java的线程池我们一般都是调用submit方法来提交任务的，同时返回一个future对象，如果不需要future对象的话可以直接调用execute方法。future对象用来获取runnable任务执行的结果！
+1. 可以看到这个抽象的实现有一个parent的字段，这个字段就是指向它所归属的EventExecutorGroup
+2. 看到这个next方法返回的是自己，也就是说默认这个EventExecutor是一个只有一个EventExecutor的EventExecutorGroup。
+3. 这个类还是继承了AbstractExecutorService类，并且重写了提供了submit系列方法，因为netty实现了自己的future/promise，所以在submit的时候需要返回自己的future/promise类。线程池我们一般都是调用submit方法来提交任务的，同时返回一个future对象，如果不需要future对象的话可以直接调用execute方法。future对象用来获取runnable任务执行的结果！future/promise会单独进行介绍。
 
 实际上到了这个类之后，我们的eventExecutor有了submit的方法，但是还没有具体的实现，因为submit方法内部实际上是调用的execute方法，所以我们接着往下看。
 
@@ -248,6 +212,14 @@ public abstract class AbstractEventExecutor extends AbstractExecutorService impl
 public abstract class AbstractScheduledEventExecutor extends AbstractEventExecutor {
 
     Queue<ScheduledFutureTask<?>> scheduledTaskQueue;//1
+    
+    Queue<ScheduledFutureTask<?>> scheduledTaskQueue() {
+        if (scheduledTaskQueue == null) {
+            scheduledTaskQueue = new PriorityQueue<ScheduledFutureTask<?>>();//1
+        }
+        return scheduledTaskQueue;
+    }
+
     
     @Override
     public ScheduledFuture<?> scheduleAtFixedRate(Runnable command, long initialDelay, long period, TimeUnit unit) {
@@ -284,76 +256,37 @@ public abstract class AbstractScheduledEventExecutor extends AbstractEventExecut
                 this, Executors.<Void>callable(command, null),
                 ScheduledFutureTask.deadlineNanos(unit.toNanos(initialDelay)), -unit.toNanos(delay)));
     }
+    
+    <V> ScheduledFuture<V> schedule(final ScheduledFutureTask<V> task) {//3
+        if (inEventLoop()) {
+            scheduledTaskQueue().add(task);
+        } else {
+            execute(new Runnable() {
+                @Override
+                public void run() {
+                    scheduledTaskQueue().add(task);
+                }
+            });
+        }
+
+        return task;
+    }
 
 }
 ```
 
-1. 这个类加了一个queue，用来实现定时的执行
-2. 这个类锦上添花了，在AbstractEventExecutor的submit的方法基础上添加了scheduleAtFixedRate和scheduleAtFixedDelay，延迟执行和定时执行的功能。
+1. 这个类加了一个queue，用来实现定时的执行任务。可以看到这个队列的具体实现是一个优先队列，优先队列基于堆来实现，可以用来选取最近需要执行的任务。
+2. 在AbstractEventExecutor的submit的方法基础上添加了scheduleAtFixedRate和scheduleAtFixedDelay，延迟执行和定时执行的功能。
+3. 最终会调用schedule这个方法来添加定时任务，定时任务的添加原理就是将定时任务对应的ScheduleFutureTask加入到优先队列中。等待线程来执行。周期性任务和间隔性任务的原理是一样的，都是在ScheduleFutureTask执行完毕之后更新下一次执行的时间，然后将ScheduleFutureTask重新加入队列，等待下一次的调度执行。
 
-也就是说我们现在eventExecutor越来越完善了，但是还是没有用，因为还是没有具体的实现，所以接下来看！
+也就是说我们现在EventExecutor越来越完善了，但是还是没有用，因为还是没有execute方法，也就是说没有具体的实现，所以接下来看！
 
 下一个类是：SingleThreadEventExecutor，看看关键代码
 
 ```java
 public abstract class SingleThreadEventExecutor extends AbstractScheduledEventExecutor implements OrderedEventExecutor {
 
-    static final int DEFAULT_MAX_PENDING_EXECUTOR_TASKS = Math.max(16,
-            SystemPropertyUtil.getInt("io.netty.eventexecutor.maxPendingTasks", Integer.MAX_VALUE));
-
-    private static final InternalLogger logger =
-            InternalLoggerFactory.getInstance(SingleThreadEventExecutor.class);
-
-    private static final int ST_NOT_STARTED = 1;
-    private static final int ST_STARTED = 2;
-    private static final int ST_SHUTTING_DOWN = 3;
-    private static final int ST_SHUTDOWN = 4;
-    private static final int ST_TERMINATED = 5;
-
-    private static final Runnable WAKEUP_TASK = new Runnable() {
-        @Override
-        public void run() {
-            // Do nothing.
-        }
-    };
-    private static final Runnable NOOP_TASK = new Runnable() {
-        @Override
-        public void run() {
-            // Do nothing.
-        }
-    };
-
-    private static final AtomicIntegerFieldUpdater<SingleThreadEventExecutor> STATE_UPDATER =
-            AtomicIntegerFieldUpdater.newUpdater(SingleThreadEventExecutor.class, "state");
-    private static final AtomicReferenceFieldUpdater<SingleThreadEventExecutor, ThreadProperties> PROPERTIES_UPDATER =
-            AtomicReferenceFieldUpdater.newUpdater(
-                    SingleThreadEventExecutor.class, ThreadProperties.class, "threadProperties");
-
     private final Queue<Runnable> taskQueue;//运行的任务列表
-
-    private volatile Thread thread;
-    @SuppressWarnings("unused")
-    private volatile ThreadProperties threadProperties;
-    private final Executor executor;
-    private volatile boolean interrupted;
-
-    private final Semaphore threadLock = new Semaphore(0);
-    private final Set<Runnable> shutdownHooks = new LinkedHashSet<Runnable>();
-    private final boolean addTaskWakesUp;
-    private final int maxPendingTasks;
-    private final RejectedExecutionHandler rejectedExecutionHandler;
-
-    private long lastExecutionTime;
-
-    @SuppressWarnings({ "FieldMayBeFinal", "unused" })
-    private volatile int state = ST_NOT_STARTED;
-
-    private volatile long gracefulShutdownQuietPeriod;
-    private volatile long gracefulShutdownTimeout;
-    private long gracefulShutdownStartTime;
-
-    private final Promise<?> terminationFuture = new DefaultPromise<Void>(GlobalEventExecutor.INSTANCE);
-    
     
     @Override
     public void execute(Runnable task) {//1
@@ -410,29 +343,6 @@ public abstract class SingleThreadEventExecutor extends AbstractScheduledEventEx
                                 SingleThreadEventExecutor.class.getSimpleName() + ".confirmShutdown() must be called " +
                                 "before run() implementation terminates.");
                     }
-
-                    try {
-                        // Run all remaining tasks and shutdown hooks.
-                        for (;;) {
-                            if (confirmShutdown()) {
-                                break;
-                            }
-                        }
-                    } finally {
-                        try {
-                            cleanup();
-                        } finally {
-                            STATE_UPDATER.set(SingleThreadEventExecutor.this, ST_TERMINATED);
-                            threadLock.release();
-                            if (!taskQueue.isEmpty()) {
-                                logger.warn(
-                                        "An event executor terminated with " +
-                                                "non-empty task queue (" + taskQueue.size() + ')');
-                            }
-
-                            terminationFuture.setSuccess(null);
-                        }
-                    }
                 }
             }
         });
@@ -445,7 +355,7 @@ public abstract class SingleThreadEventExecutor extends AbstractScheduledEventEx
 
 1. execute方法，整个线程池的核心入口
 
-2. 判断一下是不是在eventLoop里面，这个怎么理解？我们可能从另外一个线程调用execute方法，那么此时inEventLoop这个值就是false的，但是我们可能提交了一个task，这个task在eventExecutor里面执行的时候又调用了execute方法，这个时候inEventLoop就是true。
+2. 判断一下是不是在eventLoop里面，这个怎么理解？我们可能从另外一个线程调用execute方法，那么此时inEventLoop这个值就是false的，但是我们可能提交了一个task，这个task在eventExecutor里面执行的时候又调用了execute方法，这个时候inEventLoop就是true。如果在eventloop里面，那么直接执行，否则就出现了循环等待了。
 
 3. startThread方法，最终会调用到上面的doStartThread方法，最终调用到了代码5处的run方法，这个方法是一个抽象方法，需要实现！注意代码6处的一个executor，如果追踪这个来源，这个executor是java自带的方式实现的一个executor，就是一个用来启动线程并且执行的，这样的好处是不用自己去new thread再start。直接调用它的executor方法。实际上跟进去代码如下
 
@@ -524,7 +434,7 @@ public final class DefaultEventExecutor extends SingleThreadEventExecutor {
 
 
 
-###下一节介绍一下netty里面的eventLoop，先理解eventExecutor再来理解eventLoop会方便很多！看到这里你会不会想平时写程序的时候把DefaultEventExecutor拿来用用呢，netty提供的很多组件都可以拿过来自己使用
+###理解eventExecutor是理解netty的很关键的部分，因为netty将线程模型进行定制，可以和netty无竞争的思想契合！看到这里你可以根据需求尝试使用DefaultEventExecutor。
 
 
 
