--- a/分库分表终极总结.md
+++ b/分库分表终极总结.md
@@ -4,7 +4,7 @@ https://tech.youzan.com/trade_manage/ 架构不断演化
 
 
 
-https://tech.meituan.com/dianping_order_db_sharding.html 如何进行sharding
+https://tech.meituan.com/dianping_order_db_sharding.html 如何进行sharding, 分表是终极，根据分表字段中的几位来进行分库哈哈哈
 
 
 
@@ -15,6 +15,8 @@ https://mp.weixin.qq.com/s/3ZxGq9ZpgdjQFeD2BIJ1MA 分库分表sharding
 https://www.jianshu.com/p/96c7858b580f mysql同步到es
 
 
+
+https://mp.weixin.qq.com/s?__biz=MzU0MDExOTUyMg==&mid=2247484379&idx=1&sn=1e2cc2cf49a4060cfe0cadf4d4ed694e&chksm=fb3f5b56cc48d240214724d23d981d803413a8c138346bd26b49bcf020aa425f8633ff2484ce&mpshare=1&scene=1&srcid=09281eMqNZTbINk82brbQad3%23rd   mycat中间件的优劣
 
 
 
